# product002_FarmManageSystem

./: CLAUDE.md  README.md  docker-compose.yml  vercel.json
binjo-api/: .env.example  .gitignore  Dockerfile  pyproject.toml
binjo-api/alembic/: env.py
binjo-api/alembic/versions/: 0b4385a52a27_add_phase_3_financial_tables.py  65a1c610afa0_add_phase_4_payment_shipping_customer_.py  a1f31144fd30_add_phase2_tables_farmer_field_voice_.py  b2c8f3a91d47_add_photo_urls_to_farm_log.py
binjo-api/app/: config.py  database.py  dependencies.py  main.py
binjo-api/app/api/v1/: router.py
binjo-api/app/core/ai/: claude_provider.py  llm_provider.py
binjo-api/app/core/auth/: jwt_handler.py  kakao_auth.py
binjo-api/app/core/external_api/: weather_kma.py
binjo-api/app/core/payment/: payment_provider.py  toss_provider.py
binjo-api/app/core/storage/: file_manager.py
binjo-api/app/core/stt/: post_processor.py  whisper_api.py
binjo-api/app/data/: pesticide_safety.py
binjo-api/app/models/: ai_insight.py  analytics_snapshot.py  customer.py  farm_log.py  farmer.py  field.py  financial_transaction.py  monthly_report.py  payment.py  receipt_scan.py  sales_order.py  shipping.py  voice_recording.py
binjo-api/app/modules/bookkeeping/: chart_generator.py  (+5 more)
binjo-api/app/schemas/: auth.py  customer.py  farm_log.py  field.py  payment.py  receipt.py  report.py  sales_order.py  transaction.py  voice.py  weather.py
binjo-api/workers/: celery_app.py
binjo-api/workers/tasks/: cleanup_audio.py  generate_monthly_report.py  nightly_analytics.py  process_receipt.py  process_voice.py
(+99 files in other folders)
